test/type/wrong/hr3.kk
function poly(xs : list<forall<a> a -> a>)  {
  1
}

function wrong(x) {
  poly(x)
}